--- a/Java-application/Jenkinsfile
+++ b/Java-application/Jenkinsfile
@@ -1,11 +1,12 @@
 pipeline {
   agent {
-    docker { image 'node:16-alpine' }
+    docker { image 'maven:3.8.1-adoptopenjdk-11' }
   }
   stages {
     stage('Test') {
       steps {
-        sh 'node --version'
+        sh 'javac Hello.java'
+        sh 'java Hello'
       }
     }
   }
