--- a/Java-application/Jenkinsfile
+++ b/Java-application/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
   agent {
-    docker { image 'maven:3.8.1-adoptopenjdk-11' }
+    docker { image 'openjdk:23-oracle' }
   }
   stages {
     stage('Test') {
